<resources>
    <string name="app_name">My Application</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!-- https://www.keynotesupport.com/internet/special-characters-math-currency.shtml -->
    <string name="clear">C</string>
    <string name="brackets">()</string>
    <string name="percent">%</string>
    <!-- alt+0247-->
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="backspace">****</string>
    <string name="display">Enter</string>
</resources>